--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "tailwindcss build styles.css -o output.css"
+    "build:css": "tailwindcss build styles.css -o output.css",
+    "build": "npm run build:css"
   },
   "keywords": [],
   "author": "",
