--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "tailwindcss -i ./src/css/styles.css -o ./dist/output.css",
-    "build": "npm run build:css"
+    "build:css": "tailwindcss -i ./src/css/styles.css -o ./src/dist/output.css"
   },
   "keywords": [],
   "author": "",
