--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Miniproject 2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "tailwindcss -i ./src/css/styles.css -o ./src/dist/output.css"
+    "build": "npx tailwindcss -i ./src/css/styles.css -o ./dist/output.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "tailwindcss": "^3.4.4"
   }
 }
